src/test/06-Errors/error-ctor-static.txt
error-ctor-static.ck:5:5: error: constructor cannot be declared as 'static'...
[5]     fun static void Foo() { }
        ^
